<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="280dp"
    android:background="#FFB300">

    <ImageButton
        android:id="@+id/saveButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="296dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="225dp"
        android:src="@android:drawable/ic_menu_save"
        android:contentDescription="@string/saveImageDesc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loopDisplayLabel"
        android:layout_width="254dp"
        android:layout_height="118dp"
        android:layout_marginStart="78dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="96dp"
        android:text="@string/loopDisplayLabel"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="154dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="16dp"
        android:src="@android:drawable/ic_media_play"
        android:contentDescription="@string/playImageDesc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/shareButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="298dp"
        android:layout_marginBottom="225dp"
        android:src="?attr/actionModeShareDrawable"
        android:contentDescription="@string/shareImageDesc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>