<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/generationHeader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="650dp"
        android:background="#4CAF50"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:title="@string/app_name"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Large"
        app:titleTextColor="#040404">

        <ImageButton
            android:id="@+id/libraryButton"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:contentDescription="@string/libraryImageDesc"
            android:src="@android:drawable/ic_input_get"
            tools:layout_editor_absoluteX="388dp" />

    </androidx.appcompat.widget.Toolbar>

    <Spinner
        android:id="@+id/synthesizerSelect"
        android:layout_width="191dp"
        android:layout_height="43dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="161dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="527dp"
        android:background="#FFFFFF"
        android:entries="@array/synthesizers"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/generateTrigger"
        android:layout_width="174dp"
        android:layout_height="93dp"
        android:layout_marginStart="118dp"
        android:layout_marginTop="553dp"
        android:layout_marginEnd="119dp"
        android:layout_marginBottom="85dp"
        android:text="@string/generateLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/sizeSlider"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="169dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="261dp"
        android:layout_marginEnd="226dp"
        android:layout_marginBottom="405dp"
        android:max="@integer/numSizes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/keySlider"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="169dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="409dp"
        android:layout_marginEnd="226dp"
        android:layout_marginBottom="257dp"
        android:max="@integer/numNoteTypes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/speedSlider"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="163dp"
        android:layout_height="68dp"
        android:layout_marginStart="232dp"
        android:layout_marginTop="261dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="402dp"
        android:max="@integer/numSpeeds"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/orderingSelect"
        android:layout_width="162dp"
        android:layout_height="45dp"
        android:layout_marginStart="232dp"
        android:layout_marginTop="409dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="277dp"
        android:entries="@array/orderings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>